--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Abhishek Kumar",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
 }
