--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "wake",
+  "name": "ping",
   "version": "1.0.0",
   "description": "Prevent my free apps from slepping.",
   "main": "index.js",
   "scripts": {
     "run": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon index.js"
   },
   "author": "Abhishek Kumar",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.1.0",
+    "validator": "^13.9.0"
   }
 }
